--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "ext-json": "*"
+        "ext-json": "*",
+        "illuminate/support": ">=6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*|8.*",
@@ -29,15 +30,16 @@
         "friendsofphp/php-cs-fixer": "*",
         "symfony/var-dumper": "*",
         "povils/phpmnd": "*",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "laravel/framework": "6.*"
     },
     "autoload": {
         "psr-4": {
-            "PHPExperts\\asdfadsf\\" : "src/"
+            "PHPExperts\\ContractSigner\\" : "src/"
         }
     },
     "autoload-dev": {
-        "psr-4": { "PHPExperts\\asdfadsf\\Tests\\" : "tests/" }
+        "psr-4": { "PHPExperts\\ContractSigner\\Tests\\" : "tests/" }
     },
     "config": {
         "classmap-authoritative": true
