--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require": {
         "php": "^7.3|8.*",
         "ext-json": "*",
-        "illuminate/support": ">=6.0"
+        "illuminate/support": ">=6.0",
+        "erusev/parsedown": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*|8.*",
